# moriyama

./: .gitignore  AGENTS.md  Justfile  NOTES.md  README.md  SESSION.md  pyproject.toml
resources/: README.txt  resources.qrc
scripts/: compile_resources.py
src/moriyama/: __init__.py  __main__.py  dropzone.py  imglist.py  mainwindow.py  resources_rc.py  splash.py
tests/: test_dropzone.py  test_main_window.py  test_splash.py
